<resources>
    <string name="app_name">ilia_zusik_hw5</string>
    <string name="log_in">LOG IN</string>
    <string name="trivia">Trivia</string>
    <string name="quve">\?</string>
    <string name="game_now">GAME NOW</string>
    <string name="up_with_email"><a href="https://www.google.com/">Up with Email</a></string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">NEXT</string>
</resources>