<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />


    <ImageView
        android:id="@+id/green_triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_figure"
        android:backgroundTint="@color/main_green"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="800dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="800dp" />

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/ic_gradient"
        app:layout_constraintBottom_toBottomOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@+id/sova"
        app:layout_constraintStart_toStartOf="@id/sova"
        app:layout_constraintTop_toTopOf="@id/sova" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:rotation="270"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@id/green_triangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/arrow"
        app:layout_constraintEnd_toEndOf="@id/arrow"
        app:layout_constraintStart_toStartOf="@id/arrow"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/sova"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_sova"
        app:layout_constraintBottom_toTopOf="@id/trivia"
        app:layout_constraintEnd_toEndOf="@id/trivia"
        app:layout_constraintStart_toStartOf="@id/trivia"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quve"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@id/sova"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/sova" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quve"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@id/sova"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/sova" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quve"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@id/sova"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/sova"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/game_now_button"
        app:layout_constraintVertical_bias="0.96"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_button"
        android:text="@string/game_now" />
    
    <TextView
        android:id="@+id/link_to_email"
        app:layout_constraintStart_toStartOf="@id/game_now_button"
        app:layout_constraintEnd_toEndOf="@id/game_now_button"
        app:layout_constraintBottom_toTopOf="@id/game_now_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:textSize="16sp"
        android:linksClickable="true"
        android:text="@string/up_with_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        android:background="@color/main_light_green"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/or_text"
        android:textColor="@color/gray_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/link_to_email"
        android:layout_marginVertical="10dp" />

    <ImageView
        android:layout_marginHorizontal="10dp"
        android:background="@color/gray_text"
        app:layout_constraintEnd_toStartOf="@id/or_text"
        app:layout_constraintTop_toTopOf="@id/or_text"
        app:layout_constraintBottom_toBottomOf="@id/or_text"
        android:layout_width="40dp"
        android:layout_height="1dp" />

    <ImageView
        android:layout_marginHorizontal="10dp"
        android:background="@color/gray_text"
        app:layout_constraintStart_toEndOf="@id/or_text"
        app:layout_constraintTop_toTopOf="@id/or_text"
        app:layout_constraintBottom_toBottomOf="@id/or_text"
        android:layout_width="40dp"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/facebook_button"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray_light"
        app:layout_constraintBottom_toTopOf="@id/or_text"
        android:text="@string/log_in_with_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/facebook_button"
        app:layout_constraintBottom_toBottomOf="@id/facebook_button"
        app:layout_constraintStart_toStartOf="@id/facebook_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_facebook_icon" />




</androidx.constraintlayout.widget.ConstraintLayout>