<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageView
        android:id="@+id/top_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text"
        android:background="@color/main_light_green"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="1dp" />

    <ImageButton
        android:id="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/white"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/username_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/ic_top_textedit"
        app:layout_constraintTop_toBottomOf="@id/top_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/email_area"
        app:layout_constraintTop_toBottomOf="@id/username_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_center_textedit"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/password_area"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/email_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_bottom_textedit"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/username_area"
        app:layout_constraintBottom_toBottomOf="@id/username_area"
        app:layout_constraintStart_toStartOf="@id/username_area"
        android:layout_marginHorizontal="20dp"
        android:text="@string/username"
        android:id="@+id/username_hint"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/email_area"
        app:layout_constraintBottom_toBottomOf="@id/email_area"
        app:layout_constraintStart_toStartOf="@id/email_area"
        android:layout_marginHorizontal="20dp"
        android:text="@string/email"
        android:id="@+id/email_hint"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/password_area"
        app:layout_constraintBottom_toBottomOf="@id/password_area"
        app:layout_constraintStart_toStartOf="@id/password_area"
        android:layout_marginHorizontal="20dp"
        android:text="@string/password"
        android:id="@+id/password_hint"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_username"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:backgroundTint="@color/main_light_green"
        app:layout_constraintTop_toTopOf="@id/username_area"
        app:layout_constraintBottom_toBottomOf="@id/username_area"
        app:layout_constraintStart_toEndOf="@id/username_hint"
        app:layout_constraintEnd_toEndOf="@id/username_area"
        android:layout_width="200dp"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_email"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:maxLength="20"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/main_light_green"
        app:layout_constraintTop_toTopOf="@id/email_area"
        app:layout_constraintBottom_toBottomOf="@id/email_area"
        app:layout_constraintStart_toEndOf="@id/username_hint"
        app:layout_constraintEnd_toEndOf="@id/email_area"
        android:layout_width="200dp"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:maxLength="20"
        android:inputType="textVisiblePassword"
        android:backgroundTint="@color/main_light_green"
        app:layout_constraintTop_toTopOf="@id/password_area"
        app:layout_constraintBottom_toBottomOf="@id/password_area"
        app:layout_constraintStart_toEndOf="@id/username_hint"
        app:layout_constraintEnd_toEndOf="@id/password_area"
        android:layout_width="200dp"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/next_button"
        android:layout_marginVertical="20dp"
        android:textSize="20sp"
        android:textColor="@color/gray_text"
        android:backgroundTint="@color/white"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp" />

    <ImageView
        android:id="@+id/next_button_image"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintTop_toTopOf="@id/next_button"
        app:layout_constraintBottom_toBottomOf="@id/next_button"
        app:layout_constraintEnd_toEndOf="@id/next_button"
        app:layout_constraintStart_toStartOf="@id/next_button"
        app:layout_constraintHorizontal_bias="0.95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_gradient"
        app:layout_constraintBottom_toBottomOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@+id/sova"
        app:layout_constraintStart_toStartOf="@id/sova"
        app:layout_constraintTop_toTopOf="@id/sova" />

    <ImageView
        android:layout_width="1200dp"
        android:layout_height="1200dp"
        android:layout_marginVertical="40dp"
        android:src="@drawable/ic_hill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sova" />

    <TextView
        android:id="@+id/trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

    <ImageView
        android:id="@+id/sova"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_sova"
        app:layout_constraintBottom_toTopOf="@id/trivia"
        app:layout_constraintEnd_toEndOf="@id/trivia"
        app:layout_constraintStart_toStartOf="@id/trivia"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quve"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@id/sova"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/sova" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quve"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@id/sova"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/sova" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quve"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/sova"
        app:layout_constraintEnd_toEndOf="@id/sova"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/sova"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />


</androidx.constraintlayout.widget.ConstraintLayout>